--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --host 0.0.0.0"
   },
   "author": "Michal Kawalec <michal@monad.cat>",
   "license": "ISC",
@@ -16,11 +16,18 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "scroll-to-element": "^2.0.0",
+    "simplegrid": "^1.0.2",
     "skeleton-css": "^2.0.4",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "val-loader": "^1.1.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
