--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack-dev-server --host 0.0.0.0"
+    "build": "mkdir dist; cp -r src/* dist && webpack",
+    "dev": "mkdir dist; cp -r src/* dist && webpack --watch"
   },
   "author": "Michal Kawalec <michal@monad.cat>",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "less": "^2.7.3",
